crates/ui/src/snapshots/mire_tui__view__tests__help_90x24.snap
---
source: crates/ui/src/view.rs
assertion_line: 610
expression: "snapshot(app, 90, 24)"
---
 Mire review │ unified │ focus review │ context 3 │ wrap off │ file 1/2 · 1/8
 Files         1/2 │ Navigation and layout
▌ M file.txt  +1 -1│ q            quit
  M image.bin      │ ?            toggle help
                   │ Tab          switch sidebar/review focus
                   │ b            toggle sidebar
                   │ j / Down     scroll or select next file
                   │ k / Up       scroll or select previous file
                   │ PgDn         page down
                   │ PgUp         page up
                   │ g / Home     first row
                   │ G / End      last row
                   │ ]            next file
                   │ [            previous file
                   │ }            next hunk
                   │ {            previous hunk
                   │ /            search
                   │ n            next search match
                   │ N            previous search match
                   │ +            show more context
                   │ -            show less context
                   │ w            toggle line wrapping
                   │ 1            unified layout
 help  ? / Esc close  q quit
