crates/ui/src/snapshots/mire_tui__view__tests__ready_narrow_24x9.snap
---
source: crates/ui/src/view.rs
expression: "snapshot(App::ready(&changeset), 24, 9)"
---
 Mire review │ unified
 Files │ file.txt
▌ M …xt│@@ -1,2 +1,2 @@
  M …in│    1       -old
       │          1 +new
       │    2     2  con
       │            \ No
       │ image.bin
 ? help  q quit
