crates/ui/src/snapshots/mire_tui__view__tests__ready_ordinary_64x12.snap
---
source: crates/ui/src/view.rs
expression: "snapshot(App::ready(&changeset), 64, 12)"
---
 Mire review │ unified │ focus review │ context 3
 Files      1/2 │ file.txt                       modified +1 -1
▌ M file.txt    │ ▾ @@ -1,2 +1,2 @@ heading
  M image.bin   │    1       -old
                │          1 +new
                │    2     2  context
                │            \ No newline at end of both files
                │ image.bin                            modified
                │     Binary files differ
                │
                │
 Tab focus  j/k move  / search  ? help  q quit
