crates/ui/src/snapshots/mire_tui__view__tests__state_empty_32x5.snap
---
source: crates/ui/src/view.rs
expression: "snapshot(App::ready(&empty), 32, 5)"
---
 Mire review │ unavailable
  No changes to review.


   ? help  q quit
