crates/ui/src/snapshots/mire_tui__view__tests__state_error_32x6.snap
---
source: crates/ui/src/view.rs
expression: "snapshot(App::error(\"broken input\"), 32, 6)"
---
 Mire review | unavailable | foc
            Unable to display re
            broken input


 Tab focus | j/k move | [ ] file
