crates/ui/src/snapshots/mire_tui__view__tests__state_loading_32x5.snap
---
source: crates/ui/src/view.rs
expression: "snapshot(App::loading(), 32, 5)"
---
 Mire review │ unavailable
  Loading review...


 ? help  q quit
